--- a/css/main.css
+++ b/css/main.css
@@ -31,9 +31,15 @@ html, body {
 }
 
 #header {
-    background-color: #19B5FE;
+    background-color: #434343;
     height: 60px;
-    padding-left: 20%
+    padding-left: 20%;
+}
+
+#navbar {
+    background-color: #434343;
+    height: 60px;
+    padding-left: 20%;
 }
 
 #content {
@@ -41,15 +47,26 @@ html, body {
 
 #innercontentmiddle {
     background-color: #fff;
-    margin: 0 auto;
-    width: 70%;
+    width: 90%;
     height: 100%;
+    float: left;
+}
+
+#scroll-sidebar {
+    background-color: #f1f1f1;
+    width: 10%;
+    height: 100%;
+    float: left;
 }
 
 #footerclear {
 }
 
 #footer {
-    background-color: #00f;
-    height: 100px;
+    background-color: #434343;
+    max-height: 60px;
+    height: 5%;
+    padding-left: 20%;
+    float: left;
+    width: 100%;
 }​
