--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ h1, h3, h5 {
 #innercontentmiddle {
 	background-color: #fff;
 	width: 90%;
-	height: 100%;
+	min-height: 800px;
 	float: left;
 	color: black;
 }
@@ -81,11 +81,13 @@ h1, h3, h5 {
 
 #footer {
 	background-color: #434343;
-	max-height: 60px;
-	height: 5%;
-	padding-left: 20%;
+	max-height: 160px;
+	padding-left: 10%;
+	height:25%;
 	float: left;
-	width: 100%;
+	width: 90%;
+	-webkit-column-count: 3;
+	color: white;
 }​
 
 #footerclear {
